# rust-hotpath-ipc

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
examples/: disasm.rs  execution.rs  feed.rs  gates.json  graph.json  publisher.rs  strategy.rs  subscriber.rs
src/: bytecode.rs  compiler.rs  hot_path.rs  hot_path_service.rs  latency.rs  latency_window.rs  lib.rs  order_book.rs  pod_types.rs  rdtsc.rs  runtime.rs  service_names.rs  strategy.rs  tsc_calibration.rs
webui/: index.html
