[package]
name = "rust-hotpath-ipc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lock-free zero-copy shared-memory hot path for a low-latency trading system (extracted subsystem)"
readme = "README.md"

[lib]
name = "rust_hotpath_ipc"
path = "src/lib.rs"

[dependencies]
# Zero-copy IPC transport: the shared-memory lock-free ring buffer + pub/sub.
iceoryx2 = "0.7.0"
# POD validation for zero-copy message types.
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }
# One-time / lazy statics for calibration and the global recorder.
once_cell = "1.19"
# Fast RwLock for the TSC calibration cell.
parking_lot = "0.12"
# Async runtime for the off-hot-path latency monitor.
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }
# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# System interfaces: CPU affinity, real-time scheduling, getcpu.
libc = "0.2"
core_affinity = "0.8"
# Graceful shutdown for the demo processes.
ctrlc = "3.4"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/subscriber.rs"

# Three-stage trading pipeline: feed -> strategy -> execution.
[[example]]
name = "feed"
path = "examples/feed.rs"

[[example]]
name = "strategy"
path = "examples/strategy.rs"

[[example]]
name = "execution"
path = "examples/execution.rs"

# Latency-tuned release profile: fully optimized, single codegen unit, LTO.
# (panic is left at unwind so tests can assert on panics.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
