[package]
name = "rust-hotpath-ipc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lock-free zero-copy shared-memory hot path for a low-latency trading system (extracted subsystem)"
readme = "README.md"

[lib]
name = "rust_hotpath_ipc"
path = "src/lib.rs"

[dependencies]
# Zero-copy IPC transport: the shared-memory lock-free ring buffer + pub/sub.
iceoryx2 = "0.7.0"
# One-time / lazy statics for the TSC calibration cell.
once_cell = "1.19"
# Fast RwLock for the TSC calibration cell.
parking_lot = "0.12"
# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# System interfaces: CPU affinity, real-time scheduling, getcpu.
libc = "0.2"
core_affinity = "0.8"
# Graceful shutdown for the demo processes.
ctrlc = "3.4"
# Tiny blocking HTTP server for the strategy-builder control plane (optional
# tooling, not on the hot path).
tiny_http = "0.12"

[[example]]
name = "publisher"
path = "examples/publisher.rs"

[[example]]
name = "subscriber"
path = "examples/subscriber.rs"

# Three-stage trading pipeline: feed -> strategy -> execution.
[[example]]
name = "feed"
path = "examples/feed.rs"

[[example]]
name = "strategy"
path = "examples/strategy.rs"

[[example]]
name = "execution"
path = "examples/execution.rs"

# Control server for the visual strategy builder (serves webui/, launches the
# pipeline, streams orders + P&L to the browser). Not on the hot path.
[[bin]]
name = "control-server"
path = "src/bin/control_server.rs"

# Latency-tuned release profile: fully optimized, single codegen unit, LTO.
# (panic is left at unwind so tests can assert on panics.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
