[package]
name = "rust-hotpath-ipc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lock-free zero-copy shared-memory hot path for a low-latency trading system (extracted subsystem)"
readme = "README.md"

[lib]
name = "rust_hotpath_ipc"
path = "src/lib.rs"

[dependencies]
# Zero-copy IPC transport: the shared-memory lock-free ring buffer + pub/sub.
iceoryx2 = "0.7.0"
# One-time / lazy statics for the TSC calibration cell.
once_cell = "1.19"
# Fast RwLock for the TSC calibration cell.
parking_lot = "0.12"
# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# System interfaces: CPU affinity, real-time scheduling, getcpu.
libc = "0.2"
core_affinity = "0.8"
# Graceful shutdown for the demo processes.
ctrlc = "3.4"
# Tiny blocking HTTP server for the strategy-builder control plane (optional
# tooling, not on the hot path).
tiny_http = "0.12"

# All runnable processes are first-class binaries under src/bin/, in two groups:
#
#   Trading pipeline (the system) — run as three pinned processes over the bus:
#     exchange    stage 1: order-book matching engine + market-data source
#     strategy    stage 2: signal -> risk -> OrderCommand
#     execution   stage 3: consumes fills, tracks position + P&L
#     disasm      tool: dump the bytecode a strategy graph compiles to
#
#   Transport benchmark (a microbenchmark of raw iceoryx2 latency, not the
#   pipeline) — two processes measuring per-message publish/receive latency:
#     bench-publisher / bench-subscriber
#
# These are auto-discovered from src/bin/, so they need no explicit [[bin]]
# entries. Only control-server needs one, to override its target name (the file
# is control_server.rs but the binary is control-server).

# Control server for the visual strategy builder (serves webui/, launches the
# pipeline, streams orders + P&L to the browser). Not on the hot path.
[[bin]]
name = "control-server"
path = "src/bin/control_server.rs"

# Latency-tuned release profile: fully optimized, single codegen unit, LTO.
# (panic is left at unwind so tests can assert on panics.)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
